[package]
name = "weiji-decrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[[bin]]
name = "ACDSeePro6"
path = "src/bin/decrypt.rs"

[[bin]]
name = "entry"
path = "src/bin/tmp-entry.rs"


[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["derive"] }
flate2 = "1.0.26"
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["full"] }
walkdir = "2.3.3"
